Merapikan Materi Masa Orde Baru

--- a/materi/indonesia-pada-masa-orde-baru/style.css
+++ b/materi/indonesia-pada-masa-orde-baru/style.css
@@ -72,7 +72,7 @@ nav .nav-end {
 
 
 header {
-    background-image: url('Image Orde Baru.jpg');
+    background-image: url('image/Image Orde Baru.jpg');
     background-size: cover;
     height: 90vh;
 
