Menambah Desain Materi

--- a/materi/indonesia-pada-masa-orde-baru/Bagian Materi/style.css
+++ b/materi/indonesia-pada-masa-orde-baru/Bagian Materi/style.css
@@ -114,7 +114,7 @@ div.container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30rem;
+    margin-top: 0px;
 }
 
 h1 {
