--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,3 @@
-:root {
-  --xxl-breakpoint: 1400px;
-  --xl-breakpoint: 1200px;
-  --lg-breakpoint: 992px;
-  --md-breakpoint: 768px;
-  --sm-breakpoint: 576px;
-  --x-sm-breakpoint: 576px;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -35,7 +26,7 @@ section, footer {
 }
 
 .container {
-  width: var(--xl-breakpoint);
+  width: 1200px;
 }
 
 div.container-header {
@@ -44,51 +35,57 @@ div.container-header {
 }
 
 /* ========== NAVBAR ========== */
-nav {
+div.navbar {
+  width: 100%;
   height: 60px;
-  width: 100vw;
-  background-color: white;
+  background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 4px 0px;
   position: fixed;
+}
+
+div.navbar nav {
+  padding: 0 80px;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+div.navbar nav div.container {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-nav div.nav-brand {
-  margin-left: 2rem;
-  letter-spacing: 2px;
-  font-size: x-large;
-  color: white;
-}
-
-nav div.nav-brand a {
-  color: rgb(24, 24, 24);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-nav ul.nav-items {
-  margin-left: 1rem;
-  list-style-type: none;
-  display: inline-flex;
-  flex-grow: 1;
-}
-
-nav a {
-  color: #a3a3a3;
-  display: block;
+div.navbar nav div.container div.navbar-brand {
   padding: 12px;
 }
 
-nav a:hover {
-  color: #181818;
-}
-
-nav div.nav-end {
-  margin-right: 3rem;
-}
-
-nav div.nav-end a {
+div.navbar nav div.container div.navbar-brand a {
+  color: #222;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  letter-spacing: 2px;
   font-size: x-large;
+}
+
+div.navbar nav div.container ul.navbar-items {
+  list-style: none;
+  flex-grow: 1;
+  display: flex;
+}
+
+div.navbar nav div.container ul.navbar-items li a, div.navbar-end a {
+  padding: 12px;
+  font-weight: 500;
+  color: #969699;
+}
+
+div.navbar nav div.container ul.navbar-items li a:hover, div.navbar-end a:hover {
+  color:  #222;
+}
+
+div.navbar nav div.container div.navbar-end a {
+  font-size: 1.5rem;
 }
 /* ========== NAVBAR ========== */
 
@@ -238,7 +235,7 @@ section#developers div.container-main div.card div.card-body blockquote.card-quo
 }
 
 section#developers div.container-main div.card ul.card-links {
-  list-style-type: none;
+  list-style: none;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -274,16 +271,16 @@ footer div.container {
   padding: 1.8rem;
 }
 
-footer div.container div.top {
+footer div.container div.navigations {
   margin-bottom: 1rem;
 }
 
-footer div.container div.top a {
+footer div.container div.navigations a {
   color: #a3a3a3;
   margin: 4px;
 }
 
-footer div.container div.top a:hover {
+footer div.container div.navigations a:hover {
   color: #f1f1f1;
 }
 /* ========== FOOTER ========== */
