Changed margin on 'hero image'

--- a/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/assets/css/style.css
+++ b/materi/proklamasi-kemerdekaan-dan-pembentukan-pemerintahan-awal/assets/css/style.css
@@ -133,7 +133,7 @@ div#main-content div.container h1.main-content-title {
 div#main-content div.container img.hero-banner {
   width: 100%;
   height: auto;
-  margin-bottom: 1.5em;
+  margin: 1.5em 0;
 }
 
 div#main-content div.container div {
